# CabralCalc

./: .compile.sh  .gitignore  .notes.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md
include/: calculator.h  mathexpression.h  parser.h  parser.hp  parser.hpp  utils.h
include/parser/: math.hpp  semitoken.hpp  token.hpp  tokenizer.hpp
src/: calculator.c  main.c  mathexpression.c  parser.c  parser.cc  utils.c
src/parser/: math.cc  semitoken.cc  token.cc  tokenizer.cc
tests/: parser-test.cc
